// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx parses story file fixtures/Children.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Children prop, children content",
      "nameForId": undefined,
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "name": "Children prop, empty body",
      "nameForId": undefined,
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "name": "Children prop, no body",
      "nameForId": undefined,
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 12,
        },
        "start": {
          "column": 0,
          "line": 12,
        },
      },
      "name": "No children prop, children content",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file fixtures/Spread.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 15,
        },
        "start": {
          "column": 0,
          "line": 15,
        },
      },
      "name": undefined,
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/MdxMeta.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 3,
      },
    },
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/MdxMetaAndStory.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 3,
      },
    },
    "title": undefined,
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 5,
        },
        "start": {
          "column": 0,
          "line": 5,
        },
      },
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/MdxStory.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 3,
        },
        "start": {
          "column": 0,
          "line": 3,
        },
      },
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/autoTitle/mdx/PlainMarkdown.stories.mdx 1`] = `undefined`;

exports[`mdx parses story file project/src/stories/CsfWithMdx.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 5,
      },
      "start": {
        "column": 0,
        "line": 5,
      },
    },
    "title": "Example/MDX importing CSF",
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 11,
        },
        "start": {
          "column": 0,
          "line": 11,
        },
      },
      "name": "Basic",
      "nameForId": "Basic",
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 21,
        },
        "start": {
          "column": 0,
          "line": 21,
        },
      },
      "name": "Story name from MDX",
      "nameForId": "Basic 2",
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 25,
        },
        "start": {
          "column": 0,
          "line": 25,
        },
      },
      "name": "Basic 3",
      "nameForId": "Basic 3",
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/CustomId.stories.mdx 1`] = `
{
  "meta": {
    "id": "manually-specified-mdx-id",
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/Custom ID MDX",
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 7,
        },
        "start": {
          "column": 0,
          "line": 7,
        },
      },
      "name": "Story",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/DocsOnly.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/MDX Docs Only",
  },
  "stories": [],
}
`;

exports[`mdx parses story file project/src/stories/DocsOnlyTop.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 3,
      },
    },
    "title": "MDX Docs at top level",
  },
  "stories": [],
}
`;

exports[`mdx parses story file project/src/stories/MdxWithStories.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 6,
      },
      "start": {
        "column": 0,
        "line": 6,
      },
    },
    "title": "Example/MDX with Stories",
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "name": "MDX first story",
      "nameForId": undefined,
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 14,
        },
        "start": {
          "column": 0,
          "line": 14,
        },
      },
      "name": "MDX second story",
      "nameForId": undefined,
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 18,
        },
        "start": {
          "column": 0,
          "line": 18,
        },
      },
      "name": "MDX Story 3",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/MdxWithStoriesTop.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 4,
      },
      "start": {
        "column": 0,
        "line": 4,
      },
    },
    "title": "MDX with stories, top",
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "name": "MDX with stories, top",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx parses story file project/src/stories/Precedence.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": {
      "end": {
        "column": 0,
        "line": 4,
      },
      "start": {
        "column": 0,
        "line": 4,
      },
    },
    "title": "Example/Precedence",
  },
  "stories": [
    {
      "location": {
        "end": {
          "column": 0,
          "line": 20,
        },
        "start": {
          "column": 0,
          "line": 20,
        },
      },
      "name": "Story with name, story, body",
      "nameForId": "Small",
    },
    {
      "location": {
        "end": {
          "column": 0,
          "line": 26,
        },
        "start": {
          "column": 0,
          "line": 26,
        },
      },
      "name": "Story with name, body",
      "nameForId": undefined,
    },
  ],
}
`;
